--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-    <link rel="icon" href="/DAY2/logo.png">
+    <link rel="icon" href="/logo.png">
 </head>
 <body>
     <h1> My Multimedia Blog!! <ins>sponsored by TAP ACADEMY</ins> &#8482 </h1>
@@ -72,3 +72,4 @@
 </body>
 
 </html>
+
