--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1> My Multimedia Blog!! <ins>sponsored by TAP ACADEMY</ins> &#8482 </h1>
     <h2> &#9835 My Favourite <ins>Songs </ins> of All Time &#9835</h2>
     <h3> Song 1. <strong>Aakasam Lona</strong> from Oh Baby | <em>Mickey J. Meyer</em></h3>
-    <audio src="/DAY2/Akasam Lona.mp3" controls></audio>
+    <audio src="./Akasam Lona.mp3" controls></audio>
     <h3> Song 2. <strong>Charmer</strong> | <em>StrayKids</em></h3>
-    <audio src="/charmer.mp3" controls></audio>
+    <audio src="./charmer.mp3" controls></audio>
     <h3> Song 3. <strong>Either Way</strong> | <em>IVE</em></h3>
-    <audio src="/Either Way.mp3" controls></audio>
+    <audio src="./Either Way.mp3" controls></audio>
     <h3> Song 4. <strong>good enough</strong> | <em>Xdinary Heroes</em></h3>
-    <audio src="/good enough.mp3" controls></audio>
+    <audio src="./good enough.mp3" controls></audio>
     <h3> Song 5. <strong>Hoyna Hoyna</strong> from Gang Leader | <em>Anirudh Ravichander</em> </h3>
-    <audio src="/hoyna hoyna.mp3" controls></audio>
+    <audio src="./hoyna hoyna.mp3" controls></audio>
 
     <h2> 📽 My Favourite <ins>Movies</ins> of all Time 📽</h2>
     <h3> 1. <mark>Panjaa</mark> | 1M views </h3>
@@ -72,4 +72,5 @@
 </body>
 
 </html>
+
 
